Hotel: Delete last slide, added new BG img, and fixed vendor img going out of view in mobile size

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,4 @@
 /* Background Color */
 .bg-white { background-color: #fff; }
 .bg-black-trans3 { background-color: rgba(0,0,0,0.3); }
+.bg-black-trans5 { background-color: rgba(0,0,0,0.5); }
